--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,15 @@
     tools:context="com.hfad.workout.MainActivity">
 
     <fragment
-        android:id="@+id/detail_frag"
-        android:layout_width="match_parent"
+        android:id="@+id/list_frag"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        class="com.hfad.workout.WorkoutDetailFragment" />
+        android:layout_weight="2"
+        class="com.hfad.workout.WorkoutListFragment" />
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3" />
 </LinearLayout>
